--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -35,7 +35,7 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="/">My Profile</a></li>
+                  <li><a href="/profile">My Profile</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Golfer Options<span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -57,7 +57,7 @@
                         <p class='list-group-item disabled'>Select your course:</p>
                 </div>
 
-                <div class="well well-sm"><a href='/newscorecard'>Add a scorecard for a new course</a></div>
+                <div class="well well-sm"><a href='/scorecard'>Add a scorecard for a new course</a></div>
 
 
 
