nett score submitted to DB sucessfully

--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -89,23 +89,23 @@
 
                                         <!-- Yardage for Holes 1 - 9 -->
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
                                 </div>
 
@@ -138,23 +138,23 @@
 
                                         <!-- Yardage for Holes 10 - 18 -->
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" min='3' max='5' required='false'>
+                                        <input type="number" name='' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
 
                                 </div>
 
