--- a/views/newScore.html
+++ b/views/newScore.html
@@ -97,67 +97,8 @@
 
                                                 <p class='scoreHeader'>Par</p><br>
 
-                                                <!-- Par for Holes 1 - 18 -->
-
-<!--                                                 <table>
-                                                    <tr>
-                                                        <p id='par1'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par2'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par3'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par4'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par5'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par6'></p>
-                                                    </tr>                                                                      
-                                                    <tr>
-                                                        <p id='par7'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par8'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par9'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par10'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par11'></p>
-                                                    </tr>                                                                      
-                                                    <tr>
-                                                        <p id='par12'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par13'></p>
-                                                    </tr>   
-                                                    <tr>
-                                                        <p id='par14'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par15'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par16'></p>
-                                                    </tr>                                                                      
-                                                    <tr>
-                                                        <p id='par17'></p>
-                                                    </tr>
-                                                    <tr>
-                                                        <p id='par18'></p>
-                                                    </tr>
-                                                </table>   -->                                                                   
-                                      
-                                                        <p id='par1'></p>
-                                                        <p id='par2'></p>                                                        
+                                                <!-- Par for Holes 1 - 18 -->                                                                                                                         <p id='par1'></p>
+                                                        <p id='par2'></p>                                              
                                                         <p id='par3'></p>
                                                         <p id='par4'></p>
                                                         <p id='par5'></p>
@@ -255,24 +196,24 @@
                                             <p class='well well-sm' id='nett18'></p> -->
 
                                           <!-- Nett Score Holes 1 - 18 -->
-                                                <input type="number" name='nett[]' id='nett1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett15' class="form-control" placeholder="15h hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
-                                                <input type="number" name='nett[]' id='nett18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='1' max='10' required='true'>
+                                                <input type="number" name='nett[]' id='nett1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett15' class="form-control" placeholder="15h hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" required='true'>
+                                                <input type="number" name='nett[]' id='nett18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" required='true'>
 
                                         </div>
 
@@ -296,9 +237,10 @@
         <script>
 
         function displayAll(data) {
+                // console.log(data);
                 var info = data;
                 var par = data[0].par;
-                var name 
+                var name = data[0].coursename;
                 
                 // Adding course name //
                 $('#courseName').append(name);
@@ -435,11 +377,11 @@
      }
 
      function calc12() {
-            var score = $('#score13').val();
-            var par = $('#par13').val();
+            var score = $('#score12').val();
+            var par = $('#par12').val();
             var math = ((score) - (par));
-            $('#nett13').val(math);
-            maxPutts13();
+            $('#nett12').val(math);
+            maxPutts12();
      }
 
      function calc13() {
