--- a/views/scorePage.html
+++ b/views/scorePage.html
@@ -52,7 +52,9 @@
           </nav>
             
 
-        <h1>Score Page</h1>
+        <h1>Individual Score Page</h1><br>
+        <h1>Course Name: </h1>
+
     </div>
     </body>
 </html>
