--- a/views/course.html
+++ b/views/course.html
@@ -8,7 +8,6 @@
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
-        <script src="/static/javascript/newscore.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -55,7 +54,7 @@
             
 
 
-        <h1>Individual Course Performance</h1>
+        <h1>Specific Course Performance</h1>
 
     </div>
     </body>
